link buttons work

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -22,9 +22,9 @@
 	</div><!-- /.container-fluid -->
 </nav>
 
-<!-- <div class="row">
+<div class="row">
 	<div class="col-xs-6 col-xs-offset-3">
-		<button class="col-xs-6 btn btn-warning" ng-click="newAddress()">Add Address</button>
-		<button class="col-xs-6 btn btn-info" ng-click="showAllAddresses()">Show All Addresses</button>
+		<a href="#!/address/new"><button class="col-xs-6 btn btn-warning">Add Address</button></a>
+		<a href="#!/address/list"><button class="col-xs-6 btn btn-info">All Addresses</button></a>
 	</div>
-</div> -->
+</div>
