added photos to seed file and view single address works

--- a/partials/address-list.html
+++ b/partials/address-list.html
@@ -3,7 +3,7 @@
 <div ng-repeat="address in addresses | filter: searchText">
 	<div class="panel panel-default">
 		<div class="panel-body">
-			<div class="col-xs-8">{{address.street_address}}</div>
+			<div class="col-xs-8"><a ng-href="#!/address/view/{{address.id}}">{{address.street_address}}</a></div>
 			<div class="col-xs-3">{{address.name}}</div>            
 			<div class="col-xs-1"><button class="btn btn-danger fa fa-trash-o"></button></div>
 		</div>
