--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -16,15 +16,8 @@
 		        <li><a href="#!/address/list">All Addresses</a></li>
 		        <li><a href="#!/address/new">Add New Address</a></li>
 		        <li><a href="#!/logout">Logout</a></li>
-		        <li><a href="#!/auth">Authenticate</a></li>
+		        <li><a href="#!/login">Authenticate</a></li>
 		    </ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
 </nav>
-
-<div class="row">
-	<div class="col-xs-6 col-xs-offset-3">
-		<a href="#!/address/new"><button class="col-xs-6 btn btn-warning">Add Address</button></a>
-		<a href="#!/address/list"><button class="col-xs-6 btn btn-info">All Addresses</button></a>
-	</div>
-</div>
