navbar changes correctly

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -12,12 +12,16 @@
 
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		    
-		    <ul class="nav navbar-nav navbar-right">
-		        <li><a href="#!/address/list">All Addresses</a></li>
-		        <li><a href="#!/address/new">Add New Address</a></li>
-		        <li><a href="#!/logout">Logout</a></li>
-		        <li><a href="#!/login">Authenticate</a></li>
+		    <ul class="nav navbar-nav navbar-right" ng-if="user.uid">
+		        <li><a ng-href="#!/address/list">View All Addresses</a></li>
+		        <li><a ng-href="#!/address/new">Add New Address</a></li>
+		        <li><a ng-href="#!/logout">Logout</a></li>
 		    </ul>
+
+		    <ul class="nav navbar-nav navbar-right" ng-if="!user.uid">
+		        <li><a ng-href="#!/login">Login</a></li>
+		    </ul>
+
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
 </nav>
